<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">试衣间</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_sex">性别</string>
    <string name="hint_age">年龄</string>
    <string name="hint_email">请输入您的电子邮件</string>
    <string name="hint_height">请输入您的身高</string>
    <string name="hint_weight">请输入您的体重</string>
    <string name="hint_working">您的工作是什么</string>
    <string name="hint_phone">您的手机号</string>
    <string name="hint_middle">腰围</string>
    <string name="hint_bust">胸围</string>
    <string name="hint_hips">臂围</string>
    <string name="age_prompt">选择年龄</string>
    <string name="sex_prompt">选择性别</string>
	<string name="login">登陆</string>
	<string name="register">注册</string>
	<string name="unlogin">未登陆</string>
	<string name="label_username">用户名 :</string>
	<string name="label_sex">性别 :</string>
	<string name="label_age">年龄 :</string>
	<string name="label_email">电子邮件 :</string>
	<string name="label_working">工作 :</string>
	<string name="self_label_work">工作\t\t:\t %1$s</string>
	<string name="self_label_email">电子邮件\t\t:\t %1$s</string>
	<string name="self_label_age">年龄\t\t:\t %1$s</string>
	<string name="self_label_sex">性别\t\t:\t %1$s</string>
	<string name="self_label_username">用户名\t\t:\t %1$s</string>
	<string name="self_label_weight">体重\t\t:\t %1$s</string>
	<string name="self_label_height">身高\t\t:\t %1$s</string>
	<string name="self_label_bust">胸围\t\t:\t %1$s</string>
	<string name="self_label_waist">腰围\t\t:\t %1$s</string>
	<string name="self_label_hips">臂围\t\t:\t %1$s</string>
	<string name="self_label_breadth">肩宽:\t\t:\t %1$s</string>
	<string name="tab_home_page">主页</string>
	<string name="tab_rack">我的衣架</string>
	<string name="tab_collocation">搭配推荐</string>
	<string name="tab_self">我</string>
	<string name="network_not_avaliable">网络不可用，请检查。</string>
	<string name="login_succeed">登陆成功</string>
	<string name="login_failed">登陆失败</string>
	<string name="link_error">连接错误</string>
	<string name="invalide_username">用户名不存在</string>
	<string name="password_not_match">密码不正确</string>
	<string name="network_exception">网络异常</string>
	<string name="register_succeed">注册成功</string>
	<string name="logining">正在登陆...</string>
	<string name="registering">正在注册...</string>
	<string name="fetch_userinfoing">正在获取用户信息...</string>
	<string name="fetch_data">正在获取数据...</string>
	<string name="upload">上传</string>
	<string name="upload_file">正在上传...</string>
	<string name="upload_succeed">上传成功</string>
	<string name="upload_failed">上传失败</string>
	<string name="spring">春</string>
	<string name="summer">夏</string>
	<string name="autumn">秋</string>
	<string name="winter">冬</string>
	<string name="gentleman">绅士</string>
	<string name="fashion">时尚</string>
	<string name="business">商务</string>
	<string name="leisure">休闲</string>
	<string name="sleeved">衬衣</string>
	<string name="overcoat">外套</string>
	<string name="trousers">裤子</string>
	<string name="public_place">公共场合</string>
	<string name="cocktail">酒会</string>
	<string name="office">办公室</string>
	<string name="label_type">选择类型</string>
	<string name="label_season">选择季节</string>
	<string name="label_form">选择款式</string>
	<string name="label_situation">选择场合</string>
	<string name="description_preview">图片预览</string>
	<string name="upload_image">上传图片</string>
	<string name="toast_null_preview">请上传有效图片</string>
	<string name="username_exist">注册失败，用户名已存在</string>
	<string name="phone_exist">注册失败，电话号码已存在</string>
	<string name="email_exist">注册失败，电子邮件已存在</string>
	<string name="menu_refresh">刷新</string>
	<string name="sp_label_season">季节</string>
	<string name="sp_label_situation">出席场合</string>
	<string name="sp_label_style">风格</string>
	<string name="sp_label_type">类型</string>
	<string name="open">打开</string>
	<string name="delete">删除</string>
	<string name="try_it">进入虚拟试衣</string>
	<string name="details">详细信息</string>
	<string name="modify">修改</string>
	<string name="modify_succed">修改成功</string>
	<string name="grid_empty">没有内容，请刷新</string>
</resources>
