<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/preview"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerInside"
        
        android:contentDescription="@string/description_preview"
        android:background="#fefefe99" />

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_upload_margin_top"
        android:layout_marginLeft="@dimen/dimen_upload_margin_left"
        android:text="@string/label_form"
        />
    
    <RadioGroup
        android:id="@+id/style_form_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dimen_upload_margin_left"
        android:checkedButton="@+id/leisure"
        android:weightSum="4" >

        <RadioButton
            android:id="@+id/leisure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/leisure" />

        <RadioButton
            android:id="@+id/gentleman"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gentleman" />

        <RadioButton
            android:id="@+id/business"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/business" />

        <RadioButton
            android:id="@+id/fashion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fashion" />
    </RadioGroup>

    
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_upload_margin_top"
        android:layout_marginLeft="@dimen/dimen_upload_margin_left"
        android:text="@string/label_season"
        />
    <RadioGroup
        android:id="@+id/style_season_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_upload_margin_left"
        android:orientation="horizontal"
        android:checkedButton="@+id/spring"
        android:weightSum="4" >

        <RadioButton
            android:id="@+id/spring"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spring" />

        <RadioButton
            android:id="@+id/summer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/summer" />

        <RadioButton
            android:id="@+id/autumn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/autumn" />

        <RadioButton
            android:id="@+id/winter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/winter" />
    </RadioGroup>
    
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_upload_margin_top"
        android:layout_marginLeft="@dimen/dimen_upload_margin_left"
        android:text="@string/label_type"
        />
    <RadioGroup
        android:id="@+id/style_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dimen_upload_margin_left"
        android:checkedButton="@+id/sleeved"
        android:visibility="gone"
        android:weightSum="4" >

        <RadioButton
            android:id="@+id/sleeved"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sleeved" />

        <RadioButton
            android:id="@+id/trousers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trousers" />

        <RadioButton
            android:id="@+id/overcoat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/overcoat" />
    </RadioGroup>
    
    <RadioGroup
        android:id="@+id/style_situation_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dimen_upload_margin_left"
        android:checkedButton="@+id/public_place"
        android:weightSum="4" >

        <RadioButton
            android:id="@+id/public_place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/public_place" />

        <RadioButton
            android:id="@+id/office"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/office" />

        <RadioButton
            android:id="@+id/cocktail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cocktail" />
    </RadioGroup>

    <Button 
        android:id="@+id/upload"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:text="@string/upload_image"
        />
</LinearLayout>
</ScrollView>