<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<FrameLayout 
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
    >
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_self_margin_top"
            android:layout_marginLeft="@dimen/dimen_self_margin_left"
            android:text="@string/self_label_username"
            android:textSize="@dimen/dimen_self_label" />

        <TextView
            android:id="@+id/sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_self_margin_top"
            android:layout_marginLeft="@dimen/dimen_self_margin_left"
            android:text="@string/self_label_sex"
            android:textSize="@dimen/dimen_self_label" />

        <TextView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_self_margin_top"
            android:layout_marginLeft="@dimen/dimen_self_margin_left"
            android:text="@string/self_label_age"
            android:textSize="@dimen/dimen_self_label" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_self_margin_top"
            android:layout_marginLeft="@dimen/dimen_self_margin_left"
            android:text="@string/self_label_email"
            android:textSize="@dimen/dimen_self_label" />

        <TextView
            android:id="@+id/work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_self_margin_top"
            android:layout_marginLeft="@dimen/dimen_self_margin_left"
            android:text="@string/self_label_work"
            android:textSize="@dimen/dimen_self_label" />
        
        <TextView
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_self_margin_top"
            android:layout_marginLeft="@dimen/dimen_self_margin_left"
            android:text="@string/self_label_weight"
            android:textSize="@dimen/dimen_self_label" />
        
        <TextView
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_self_margin_top"
            android:layout_marginLeft="@dimen/dimen_self_margin_left"
            android:text="@string/self_label_height"
            android:textSize="@dimen/dimen_self_label" />
        
        <TextView
            android:id="@+id/bust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_self_margin_top"
            android:layout_marginLeft="@dimen/dimen_self_margin_left"
            android:text="@string/self_label_bust"
            android:textSize="@dimen/dimen_self_label" />
        
        <TextView
            android:id="@+id/waist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_self_margin_top"
            android:layout_marginLeft="@dimen/dimen_self_margin_left"
            android:text="@string/self_label_waist"
            android:textSize="@dimen/dimen_self_label" />
        
        <TextView
            android:id="@+id/hips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_self_margin_top"
            android:layout_marginLeft="@dimen/dimen_self_margin_left"
            android:text="@string/self_label_hips"
            android:textSize="@dimen/dimen_self_label" />
        
        <LinearLayout
            android:id="@+id/btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:weightSum="3"
            android:orientation="horizontal"
            >
            <Button 
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/login"
                />
            
            <Button 
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/register"
                />
             <Button 
                android:id="@+id/upload"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                />
        </LinearLayout>
    </LinearLayout>
	<LinearLayout
            android:id="@+id/fragment2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            />    
</FrameLayout>
</ScrollView>