<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:weightSum="6"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    >
    
    <FrameLayout 
        android:id="@+id/grid_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        >
    </FrameLayout>
    
    <TableRow android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical|center_horizontal"
        >
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sp_label_season"
            />
        <Spinner 
            android:id="@+id/sp_season"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/style_season"
            />
    </TableRow>
    
    <TableRow android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
		android:layout_weight="1"
        android:weightSum="4"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical|center_horizontal"
        >
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
			android:text="@string/sp_label_style"
            />
        <Spinner
            android:id="@+id/sp_style"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:entries="@array/cloth_style"
            />
    </TableRow>
    
    <TableRow android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
		android:layout_weight="1"
        android:weightSum="4"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:gravity="center_vertical|center_horizontal"
        >
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sp_label_situation"
            />
        <Spinner 
            android:id="@+id/sp_situation"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/cloth_situation"
            />
    </TableRow>
    
    <TableRow android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
		android:layout_weight="1"
        android:weightSum="4"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical|center_horizontal"
        >
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
			android:text="@string/sp_label_type"
            />
        <Spinner
            android:id="@+id/sp_type"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
			android:entries="@array/cloth_type"
            />
    </TableRow>
    
    <Button
        android:id="@+id/find"
        android:layout_width="100dp"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@android:string/ok"
        />

</TableLayout>
